pending changes